--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="front">
                 <h2 class="front_h2">Online Consulting</h2>
                 <img src="card_img.jpg" alt="*image" id="front_img">
-                <p class="front_p" >You can get a consultation wherever you want</p>
+                <p class="front_p" >You can get a consultation </p>
                 <button class="flip-button" >Learn more</button>
             </div>
             <div class="back">
