--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     </div>        
     <div id="navbar">
-            <a  href="#header" class="nav" >Home</a>
+            <a  href="#header" class="nav"  id="nav_links">Home</a>
             <a class="nav">About</a>
-            <a class="nav" href="#services">Services</a>
-            <a class="nav">Contact</a>
+            <a class="nav" href="#services" id="nav_links">Services</a>
+            <a class="nav" href="contact.html">Contact</a>
         </div>
     
     <div id="centerdiv">   
